--- a/public/styles/pages.css
+++ b/public/styles/pages.css
@@ -133,7 +133,8 @@ footer {
 }
 @media screen and (min-width: 992px) {
   footer {
-    padding-left: 200px;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
   }
 }
 
@@ -146,9 +147,9 @@ footer h2 {
 }
 @media screen and (min-width: 992px) {
   footer h2 {
-    position: absolute;
-    right: 25px;
-    padding: 50px;
+    margin-top: 60px;
+    margin-left: 40px;
+    line-height: 50px;
   }
 }
 
@@ -162,7 +163,6 @@ footer ul {
   footer ul {
     flex-direction: row;
     margin-top: 60px;
-    padding-left: 600px;
   }
 }
 
@@ -217,7 +217,7 @@ footer ul {
 
 .spinner-container {
   background-color: #F6F6F6;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
@@ -226,9 +226,9 @@ footer ul {
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  height: 100%;
-  width: 100%;
-  opacity: 1;
+  height: 100vh;
+  width: 100vw;
+  opacity: 0.5;
   animation: hidden 0s 3s forwards;
 }
 
@@ -316,6 +316,7 @@ ol {
   flex-direction: column;
   padding: 0;
   margin-left: 30px;
+  align-items: center;
 }
 @media screen and (min-width: 992px) {
   ol {
@@ -545,9 +546,9 @@ ol > .how-it-works {
 }
 
 .back {
-  position: relative;
-  right: 50px;
-  top: 10px;
+  position: absolute;
+  right: 25px;
+  top: 25px;
   font-size: 20px;
 }
 
@@ -566,6 +567,7 @@ ol > .how-it-works {
   position: absolute;
   left: 0;
   top: 0;
+  font-size: 24px;
 }
 .heart-heading__full {
   position: absolute;
@@ -663,6 +665,7 @@ ol > .how-it-works {
   padding-bottom: 5px;
   position: relative;
   right: 140px;
+  width: 70px;
 }
 @media screen and (min-width: 992px) {
   .category__title {
