--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -1,7 +1,7 @@
 .back {
-    position: relative;
-    right: 50px;
-    top: 10px;
+    position: absolute;
+    right: 25px;
+    top: 25px;
     font-size: 20px;
 }
 
@@ -21,6 +21,7 @@
         position: absolute;
         left: 0;
         top: 0;
+        font-size: 24px;
     }
 
     &__full {
@@ -117,6 +118,7 @@
     padding-bottom: 5px;
     position: relative;
     right: 140px;
+    width: 70px;
 
     @include desktop-only {
         right: 210px;
