--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -10,7 +10,7 @@
 .heading {
     display: flex;
     justify-content: space-between;
-    width: 200px;
+    width: 250px;
 }
 
 .heart-heading {
@@ -21,14 +21,14 @@
     &__empty {
         position: absolute;
         left: 0;
-        top: 0;
+        top: 5px;
         font-size: 24px;
     }
 
     &__full {
         position: absolute;
         left: -15px;
-        top: 0;
+        top: 5px;
         padding-left: 15px;
         background-image: linear-gradient($second-color, $main-color);
         background-clip: text;
