--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -557,6 +557,11 @@ ol > .how-it-works {
   justify-content: space-between;
   width: 250px;
 }
+@media screen and (min-width: 992px) {
+  .heading {
+    width: 350px;
+  }
+}
 
 .heart-heading {
   position: relative;
@@ -566,13 +571,18 @@ ol > .how-it-works {
 .heart-heading__empty {
   position: absolute;
   left: 0;
-  top: 5px;
+  top: 25px;
   font-size: 24px;
+}
+@media screen and (min-width: 992px) {
+  .heart-heading__empty {
+    top: 35px;
+  }
 }
 .heart-heading__full {
   position: absolute;
   left: -15px;
-  top: 5px;
+  top: 25px;
   padding-left: 15px;
   background-image: linear-gradient(#FF79DA, #9356DC);
   background-clip: text;
@@ -580,6 +590,11 @@ ol > .how-it-works {
   color: transparent;
   opacity: 0;
   transition: opacity 500ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+@media screen and (min-width: 992px) {
+  .heart-heading__full {
+    top: 35px;
+  }
 }
 .heart-heading__full:hover {
   opacity: 1;
@@ -622,13 +637,11 @@ ol > .how-it-works {
 }
 .menu__title {
   font-family: "Shrikhand", serif;
-  font-size: 26px;
-  margin: 0;
+  font-size: 22px;
 }
 @media screen and (min-width: 992px) {
   .menu__title {
-    display: flex;
-    justify-content: center;
+    font-size: 26px;
   }
 }
 
